Configuration via env & logging
Add an init entrypoint script to write out gophernicus xinetd
configuration using arguments sourced from the environment.

Default to apache-style logs and tail the output to stdout.

--- a/xinetd.conf
+++ b/xinetd.conf
@@ -6,16 +6,4 @@ defaults
 	log_on_failure = HOST
 }
 
-# default: on
-# description: Gophernicus - Modern full-featured gopher server
-service gopher
-{
-	socket_type	= stream
-	protocol    = tcp
-	port        = 70
-	wait		= no
-	user		= nobody
-	server		= /usr/sbin/gophernicus
-	server_args = -r /var/gopher
-	disable		= no
-}
+includedir /etc/xinetd.d/
