--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Setup Docker build
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker hub
@@ -12,9 +14,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }} 
           password: ${{ secrets.DOCKER_HUB_PASSWORD }} 
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata@v4
+        with:
+          images: joshkaiju/gophernicus
       - name: Build and publish
         uses: docker/build-push-action@v4
         with:
-          push: true
-          tags: joshkaiju/gophernicus:test
+          push: ${{ github.event_name != 'pull_request' }} 
+          tags: ${{ steps.meta.outputs.tags }}
 
