metadata-action, not metadata

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,7 +16,7 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }} 
       - name: Docker metadata
         id: meta
-        uses: docker/metadata@v4
+        uses: docker/metadata-action@v4
         with:
           images: joshkaiju/gophernicus
       - name: Build and publish
