--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,9 +19,10 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: joshkaiju/gophernicus
-      - name: Build and publish
-        uses: docker/build-push-action@v4
-        with:
-          push: ${{ github.event_name != 'pull_request' }} 
-          tags: ${{ steps.meta.outputs.tags }}
+            #      - name: Build and publish
+            #        uses: docker/build-push-action@v4
+            #        with:
+            #          push: ${{ github.event_name != 'pull_request' }} 
+            #          tags: ${{ steps.meta.outputs.tags }}
+            #          labels: ${{ steps.meta.outputs.labels }}
 
