--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,15 +24,15 @@ jobs:
       - name: Setup Docker build
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker hub
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }} 
           password: ${{ secrets.DOCKER_HUB_PASSWORD }} 
-
-            #      - name: Build and publish
-            #        uses: docker/build-push-action@v4
-            #        with:
-            #          push: ${{ github.event_name != 'pull_request' }} 
-            #          tags: ${{ steps.meta.outputs.tags }}
-            #          labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and publish
+        uses: docker/build-push-action@v4
+        with:
+          push: ${{ github.event_name != 'pull_request' }} 
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
